<package format="2">
  <name>mloam</name>
  <version>0.0.0</version>

  <description>
    xxx
  </description>

  <maintainer email="qintonguav@gmail.com">qintong</maintainer>

  <license>BSD</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>  
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>image_transport</depend>

  <export>
  </export>
</package>
